# homelab-status

./: .dockerignore  .gitignore  .gitmessage  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker.yml
data/: journey_v1.json
docs/: ARCH-homelab-status.md  CAPABILITIES.md  DEPLOY-RUNBOOK.md  DESIGN-55-truth-layer.md  LLM-ANALYSIS-RUNBOOK.md  PLAN-13-refix-learning.md  REPO-ANALYSIS.md
homelab_status/: checker.py  db.py  enricher.py  git_history.py  infra.py  journey.py  logging_config.py  main.py  mdops.py  project_intel.py  repo_llm.py  report.py  services.py  timeline.py  web.py
homelab_status/_archive/: chatterbox_tts.py
homelab_status/static/: dashboard.css  dashboard.js
homelab_status/templates/: dashboard.html
tests/: test_code_audit.py  test_dashboard_render.py  test_freshness.py  test_git_token.py  test_infra.py  test_issues.py  test_logging_config.py  test_plan_reality.py  test_refixes.py  test_registry.py  test_repo_llm.py
